# postal-pico-rom-reader

./: README.md
firmware/: CMakeLists.txt  CMakeLists.txt~  flash_code.sh  flash_code.sh~  rom-reader.c  rom-reader.c~
pcb/rom-reader/: ajm.lib  fp-info-cache  rom-reader-cache.lib  rom-reader.kicad_pcb  rom-reader.kicad_pcb-bak  rom-reader.sch  rom-reader.sch-bak
pcb/rom-reader/fab1/: rom-reader-B_Cu.gbr  rom-reader-B_Mask.gbr  rom-reader-B_Paste.gbr  rom-reader-B_SilkS.gbr  rom-reader-Edge_Cuts.gbr  rom-reader-F_Cu.gbr  rom-reader-F_Mask.gbr  rom-reader-F_Paste.gbr  rom-reader-F_SilkS.gbr  rom-reader-NPTH-drl_map.ps  rom-reader-NPTH.drl  rom-reader-PTH-drl_map.ps  rom-reader-PTH.drl
